<resources>
    <string name="app_name">Mercado Libre</string>
    <string name="search_hint">Buscar en Mercado Libre</string>
    <string name="currency"><b>%1$.2f %2$s</b></string>
    <string name="more">Más</string>
    <string name="menu">Menú</string>
    <string name="search_action">Buscar</string>
    <string name="goToProductButton">Vista de producto</string>
    <string name="no_internet">No hay conexión</string>
    <string name="resource_not_found">No se encontro el recurso</string>
    <string name="server_error">Ocurrio un error en el servidor</string>
    <string name="bad_request">Su solicitud fue incorrecta</string>
    <string name="unknown_error">Error desconocido</string>
    <string name="results">Resultados: </string>
    <string name="not_found">No se encontraron resultados</string>
    <string name="product">Producto</string>
    <string name="userUbication">Enviar a Maria Belen Zurita - Garibaldi 3203 ></string>
    <string name="conditionProduct">Nuevo - 1258 vendidos</string>
    <string name="titleProduct">Patin artistico de bota profesional extensible</string>
    <string name="opinionsProduct">0 opiniones</string>
    <string name="priceProduct">$ 8.999</string>
    <string name="buyButton">Comprar</string>
    <string name="addToShoppingKart">Agregar al carrito</string>
    <string name="titleCharacteristicsProduct">Características</string>
    <string name="characteristicsProduct">Marca: Powerblade</string>
    <string name="titleDescriptionProduct">Descripción</string>
    <string name="descriptionProduct">del IMPORTADOR DIRECTO al consumidor. Íntegramente Forrados por Material soft para dar suavidad al contacto con el pie. Costuras reforzadas y remaches metálicos para evitar roturas. INCLUYE ALFORJA (FOTO) MIDA SU PIE al momento de realizar el pedido, así no hay margen de error en función de la horma importada</string>
</resources>
