<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff159"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/menu"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@null"
            android:contentDescription="@string/menu"
            android:src="@drawable/ic_menu_bars" />

        <TextView
            android:id="@+id/resultsText"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:text="@string/product"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/heart"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@null"
            android:contentDescription="@string/bad_request"
            android:src="@drawable/ic_heart" />

        <ImageButton
            android:id="@+id/lupa"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@null"
            android:contentDescription="@string/menu"
            android:src="@drawable/ic_search" />

        <ImageButton
            android:id="@+id/market"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@null"
            android:contentDescription="@string/menu"
            android:src="@drawable/ic_suoermercado" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ubication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff159"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageButton
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:contentDescription="@string/menu"
            android:src="@drawable/ic_ubication" />

        <TextView
            android:id="@+id/userUbication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="left|center"
            android:paddingLeft="5dp"
            android:text="@string/userUbication"
            android:textSize="14sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ubication">

        <ImageView
            android:id="@+id/imageProduct"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/conditionProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conditionProduct"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageProduct" />

        <TextView
            android:id="@+id/titleProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/conditionProduct"
            android:layout_marginTop="8dp"
            android:textSize="24dp"
            android:text="@string/titleProduct"/>

        <LinearLayout
            android:id="@+id/opinionsProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleProduct"
            android:layout_marginTop="5dp"
            tools:ignore="MissingConstraints">

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_star"
                android:layout_marginRight="10dp"
                android:background="@null"/>

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_star"
                android:layout_marginRight="10dp"
                android:background="@null"/>

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_star"
                android:layout_marginRight="10dp"
                android:background="@null"/>

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_star"
                android:layout_marginRight="10dp"
                android:background="@null"/>

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_star"
                android:layout_marginRight="10dp"
                android:background="@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/opinionsProduct"/>

        </LinearLayout>

        <TextView
            android:id="@+id/priceProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/opinionsProducts"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="18dp"
            android:text="@string/priceProduct"/>

        <Button
            android:id="@+id/buyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/buyButton"
            android:textAllCaps="false"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/priceProduct"/>

        <Button
            android:id="@+id/addToShoppingKart"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/addToShoppingKart"
            android:textAllCaps="false"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/buyButton"
            tools:layout_editor_absoluteX="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#8E8B8B"
            app:layout_constraintTop_toBottomOf="@id/addToShoppingKart" />

        <TextView
            android:id="@+id/titleCharacteristicsProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/titleCharacteristicsProduct"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addToShoppingKart"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="18dp" />

        <TextView
            android:id="@+id/characteristicsProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/characteristicsProduct"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleCharacteristicsProduct"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#8E8B8B"
            app:layout_constraintTop_toBottomOf="@id/characteristicsProduct" />

        <TextView
            android:id="@+id/titleDescriptionProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleDescriptionProduct"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/characteristicsProduct" />

        <TextView
            android:id="@+id/descriptionProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/descriptionProduct"
            app:layout_constraintTop_toBottomOf="@id/titleDescriptionProduct"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="18dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>